# rexglue-sdk

./: CMakeLists.txt  build.klog
cmake/: rexglue_install.cmake
demo-iruka-main-1/: CMakeLists.txt  CMakePresets.json
demo-iruka-main-1/src/: main.cpp
include/rex/: exception_handler.h  platform_compat.h  runtime.h  xenia_logging_compat.h
include/rex/chrono/: chrono.h  chrono_steady_cast.h
include/rex/codegen/: recompiler.h
include/rex/compat/: move_only_function.h
include/rex/graphics/: flags.h
include/rex/graphics/metal/: command_processor.h  dxbc_to_dxil_converter.h  graphics_system.h  metal_shader_converter.h  pipeline_cache.h  primitive_processor.h  render_target_cache.h  shader.h  shared_memory.h  texture_cache.h
include/rex/kernel/: xobject.h  xthread.h
include/rex/platform/: dynlib.h  macos_compat.h
include/rex/ppc/: memory.h
include/rex/runtime/guest/: context.h  exceptions.h  function.h  memory.h  types.h
include/rex/system/: kernel_state.h  xsocket.h
include/rex/thread/: timer_queue.h
include/rex/ui/: menu_item.h  surface.h  surface_macos.h  window_macos.h  windowed_app_context_macos.h
include/rex/ui/metal/: metal_immediate_drawer.h  metal_presenter.h  metal_provider.h
src/audio/: CMakeLists.txt  xma_decoder_stub.cpp
src/codegen/: builder_context.h  recompiler.cpp
src/core/: CMakeLists.txt  exception_handler_posix.cpp  filesystem_posix.cpp  mapped_memory_posix.cpp  memory_posix.cpp  threading_posix.cpp  timer_queue.cpp
src/graphics/: CMakeLists.txt  command_processor.cpp  flags.cpp  graphics_system.cpp
src/graphics/metal/: command_processor.mm  dxbc_to_dxil_converter.mm  graphics_system.mm  metal_shader_converter.mm  pipeline_cache.mm  primitive_processor.mm  render_target_cache.mm  shader.mm  shared_memory.mm  texture_cache.mm
src/graphics/pipeline/shader/: spirv_translator.cpp
src/graphics/vulkan/: command_processor.cpp  pipeline_cache.cpp  render_target_cache.cpp
src/kernel/: CMakeLists.txt  runtime.cpp  xmemory.cpp  xobject.cpp  xthread.cpp
src/kernel/xam/: xam_net.cpp
src/kernel/xboxkrnl/: xboxkrnl_io_info.cpp  xboxkrnl_modules.cpp  xboxkrnl_threading.cpp  xboxkrnl_video.cpp
src/runtime/: CMakeLists.txt  processor.cpp
src/system/: mmio_handler.cpp  xsocket.cpp  xtimer.cpp
src/ui/: CMakeLists.txt  menu_item.cpp  surface_macos.mm  window_macos.mm  windowed_app_context_macos.mm  windowed_app_main_macos.mm
src/ui/metal/: metal_immediate_drawer.mm  metal_presenter.mm  metal_provider.mm
